actualizado nombre index, todos las inciales con mayuscula, nav bar

--- a/Galeria.html
+++ b/Galeria.html
@@ -20,14 +20,14 @@
             <div class="row">
               <nav class="NavegadorCentral GradienteReves col-md-6 col-sm-12">
                 <ul>
-                  <li class="breadcrumb-item"><a href="Index.html">HOME</a></li>
-                  <li class="breadcrumb-item"><a href="QuienesSomos.html">Quienes Somos</a></li>
-                  <li class="breadcrumb-item"><a href="Productos.html">Productos</a></li>
-                  <li class="breadcrumb-item active" aria current="page">Galeria</li>
-                  <li class="breadcrumb-item btn btn-default dropdown-toggle btn-group" role="group" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria current="page"><a href="Contacto.html"><strong>Contacto</strong></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="Contacto.html">Hace tu Consulta</a></li>
-                      <li><a href="Contacto.html">Pedir Cotizacion</a></li>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a href="quienesSomos.html">Quienes Somos</a></li>
+                  <li><a href="productos.html">Productos</a></li>
+                  <li>Galeria</li>
+                  <li><a href="contacto.html"><strong>Contacto</strong></a>
+                    <ul>
+                      <li><a href="contacto.html">Hace tu Consulta</a></li>
+                      <li><a href="contacto.html">Pedir Cotizacion</a></li>
                   </li>
                     </ul>
               </ul>
