--- a/Index.html
+++ b/Index.html
@@ -20,14 +20,14 @@
               <div class="row">
                 <nav class="NavegadorCentral Gradiente col-md-6 col-sm-12">
             <ul>
-              <li class="breadcrumb-item active" aria current="page">HOME</li>
-              <li class="breadcrumb-item"><a href="QuienesSomos.html">Quienes Somos</a></li>
-              <li class="breadcrumb-item"><a href="Productos.html">Productos</a></li>
-              <li class="breadcrumb-item"><a href="Galeria.html">Galeria</a></li>
-              <li class="breadcrumb-item btn btn-default dropdown-toggle btn-group" role="group" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria current="page"><a href="Contacto.html"><strong>Contacto</strong></a>
-                <ul class="dropdown-menu Gradiente">
-                  <li><a href="Contacto.html">Hace tu Consulta</a></li>
-                  <li><a href="Contacto.html">Pedir Cotizacion</a></li>
+              <li>HOME</li>
+              <li><a href="quienesSomos.html">Quienes Somos</a></li>
+              <li><a href="productos.html">Productos</a></li>
+              <li><a href="galeria.html">Galeria</a></li>
+              <li><a href="contacto.html"><strong>Contacto</strong></a>
+                <ul>
+                  <li><a href="contacto.html">Hace tu Consulta</a></li>
+                  <li><a href="contacto.html">Pedir Cotizacion</a></li>
               </li>
           </ul>
         </nav>
@@ -35,7 +35,7 @@
 </header>
       <section class="Home">
       <h2>HOME</h2>
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="margin: 20px 0px">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="Multimedia/modulo1.jpg" class="d-block w-60 container" alt="Modulohabitable1">
@@ -95,7 +95,7 @@
       </div>
       </section>
             
-      <footer class="pie">
+      <footer class="pie container">
         <p>Copyright 2021 © Multimodulos - Modulos Habitables.</p>
         <p>Todos los derechos reservados.</p>
       </footer>
