--- a/Productos.html
+++ b/Productos.html
@@ -21,14 +21,14 @@
             <div class="row">
               <nav class="NavegadorCentral Gradiente col-md-6 col-sm-12">
                 <ul>
-                  <li class="breadcrumb-item"><a href="Index.html">HOME</a></li>
-                  <li class="breadcrumb-item"><a href="QuienesSomos.html">Quienes Somos</a></li>
-                  <li class="breadcrumb-item active" aria current="page">Productos</li>
-                  <li class="breadcrumb-item"><a href="Galeria.html">Galeria</a></li>
-                  <li class="breadcrumb-item btn btn-default dropdown-toggle btn-group" role="group" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria current="page"><a href="Contacto.html"><strong>Contacto</strong></a>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a href="quienesSomos.html">Quienes Somos</a></li>
+                  <li>Productos</li>
+                  <li><a href="galeria.html">Galeria</a></li>
+                  <li><a href="contacto.html"><strong>Contacto</strong></a>
                     <ul class="dropdown-menu">
-                      <li><a href="Contacto.html">Hace tu Consulta</a></li>
-                      <li><a href="Contacto.html">Pedir Cotizacion</a></li>
+                      <li><a href="contacto.html">Hace tu Consulta</a></li>
+                      <li><a href="contacto.html">Pedir Cotizacion</a></li>
                   </li>
                     </ul>
               </ul>
@@ -43,7 +43,7 @@
     <img class="Gradiente Caracteristicas hover"src="Multimedia/vivienda.jpg" alt=Vivienda/>
     <img class="Gradiente Caracteristicas hover"src="Multimedia/office.jpg" alt=Oficina/>
     <img class="Gradiente Caracteristicas hover"src="Multimedia/foto21.jpg" alt=Trabajoespecial/>
-    <iframe class="VideoYouTube" src="https://www.youtube.com/embed/juY_P_15Zj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay" allowfullscreen>
+    <iframe class="VideoYouTube container" src="https://www.youtube.com/embed/juY_P_15Zj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay" allowfullscreen>
     </iframe>
                   
     <table class="table table align-middle table-light table table-striped container">
@@ -51,7 +51,6 @@
       <tr>  
         <th>Productos</th>
           <th>Caracteristicas Tecnicas</th>
-          <th>Beneficios</th>
      </thead>
         </tr>
       <tr>
@@ -62,20 +61,10 @@
             <li>Relleno de poliuretano de alta densidad</li>
             <li>Piso de goma antideslizante</li>
             <li>Estructura de hierro IPN autoportante</li>
-            <li>Instalacion electrica con aire acondicionado</li>
             <li>Aberturas de aluminio modena con reja</li>
             <li>Base elevada 15cm sobre perfil IPN</li>
             <li>Medidas:2,44 x 5 o 2,44 x 6 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
       </tr>
       <tr>
@@ -87,18 +76,8 @@
             <li>Piso entablonado de 2 pulgadas</li>
             <li>Revestimiento opcional de paneles fenolicos</li>
             <li>Opcional: ventana de aluminio</li>
-            <li>Opcional:instalacion electrica</li>
             <li>Medidas:2x2 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
           </tr>
           <tr>
@@ -110,18 +89,8 @@
             <li>Piso entablonado de 2 pulgadas</li>
             <li>Revestimiento opcional de paneles fenolicos</li>
             <li>Opcional: ventana de aluminio</li>
-            <li>Opcional:instalacion electrica</li>
             <li>Medidas:2x4 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
       </tr>
       <tr>
@@ -132,20 +101,10 @@
             <li>Relleno de poliuretano de alta densidad</li>
             <li>Piso de goma antideslizante</li>
             <li>Estructura de hierro IPN autoportante</li>
-            <li>Instalacion electrica con aire acondicionado</li>
             <li>Aberturas de aluminio modena con reja</li>
             <li>Base elevada 15cm sobre perfil IPN</li>
             <li>Medidas:2,44 x 5 o 2,44 x 6 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
       </tr>
       <tr>
@@ -157,18 +116,8 @@
             <li>Piso entablonado de 2 pulgadas</li>
             <li>Revestimiento opcional de paneles fenolicos</li>
             <li>Opcional: ventana de aluminio</li>
-            <li>Opcional:instalacion electrica</li>
             <li>Medidas:2x2 o 2x4 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
       </tr>
       <tr>
@@ -179,20 +128,10 @@
             <li>Relleno de poliuretano de alta densidad</li>
             <li>Piso de goma antideslizante</li>
             <li>Estructura de hierro IPN autoportante</li>
-            <li>Instalacion electrica con aire acondicionado</li>
             <li>Aberturas de aluminio modena con reja</li>
             <li>Base elevada 15cm sobre perfil IPN</li>
             <li>Medidas:2,44 x 5 o 2,44 x 6 mts</li>
           </ul>
-        </td>
-        <td>
-          <ol>
-            <li>Gran capacidad aislante termica y sonora</li>
-            <li>Hermeticos</li>
-            <li>Antibandalismo</li>
-            <li>De facil transporte</li>
-            <li>Gran capacidad aislante</li>
-          </ol>
         </td>
       </tr>
     </table>
@@ -200,7 +139,7 @@
     <section class="Contacto container-fluid">
       <div class="row"> 
         <h4>Seguinos en redes sociales</h4>
-        <div class="Redes col-md-6"> 
+        <div class="Redes container col-md-6"> 
             <img class="Redes__IconoFacebook hover" src="Multimedia/Facebook.png" alt=Facebook/>
             <img class="Redes__IconoInstagram hover" src="Multimedia/Instagram.jpg" alt=Instagram/>
         </div>
@@ -215,7 +154,7 @@
         </div>
         </section>
             
-      <footer class="pie">
+      <footer class="pie container">
         <p>Copyright 2021 © Multimodulos - Modulos Habitables.</p>
         <p>Todos los derechos reservados.</p>
       </footer>
