actualizado nombre de foto facebook y de carpeta galeria

--- a/Galeria.html
+++ b/Galeria.html
@@ -37,63 +37,63 @@
                    
   <h2>Galeria</h2>
   <section class="FotosDestacadas">    
-     <img class="Galeria Gradiente hover" src="multimedia/Foto1.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto2.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto3.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto4.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto5.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto6.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto7.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto8.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto9.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto10.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto11.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto12.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto13.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto14.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto15.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto16.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto17.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto18.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto19.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto20.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto21.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto22.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto23.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto24.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto25.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto26.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto27.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto28.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto29.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto30.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto31.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto32.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto33.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto34.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto35.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto36.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto37.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto38.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto39.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto40.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto41.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto42.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto43.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto44.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto45.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto46.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto47.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto48.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto49.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto50.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto51.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto52.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto53.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto54.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto55.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto56.jpg" alt=Modulo/>
-     <img class="Galeria Gradiente hover"src="multimedia/Foto57.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover" src="Multimedia/Foto1.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto2.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto3.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto4.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto5.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto6.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto7.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto8.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto9.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto10.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto11.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto12.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto13.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto14.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto15.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto16.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto17.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto18.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto19.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto20.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto21.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto22.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto23.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto24.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto25.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto26.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto27.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto28.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto29.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto30.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto31.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto32.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto33.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto34.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto35.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto36.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto37.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto38.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto39.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto40.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto41.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto42.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto43.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto44.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto45.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto46.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto47.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto48.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto49.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto50.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto51.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto52.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto53.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto54.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto55.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto56.jpg" alt=Modulo/>
+     <img class="Galeria Gradiente hover"src="Multimedia/Foto57.jpg" alt=Modulo/>
      <img class="Galeria Gradiente hover"src="Multimedia/pañol.jpeg" alt=Pañol/>
      <img class="Galeria Gradiente hover"src="Multimedia/Garita.jpeg" alt=Garita/>
      <img class="Galeria Gradiente hover"src="Multimedia/Garita 1x1.jpeg" alt=Garita/>
@@ -105,7 +105,7 @@
     <div class="row"> 
       <h4>Seguinos en redes sociales</h4>
       <div class="Redes col-md-6"> 
-          <img class="Redes__IconoFacebook hover" src="Multimedia/Facebook.png" alt=Facebook/>
+          <img class="Redes__IconoFacebook hover" src="Multimedia/facebook.png" alt=Facebook/>
           <img class="Redes__IconoInstagram hover" src="Multimedia/Instagram.jpg" alt=Instagram/>
       </div>
       
