--- a/Productos.html
+++ b/Productos.html
@@ -140,7 +140,7 @@
       <div class="row"> 
         <h4>Seguinos en redes sociales</h4>
         <div class="Redes container col-md-6"> 
-            <img class="Redes__IconoFacebook hover" src="Multimedia/Facebook.png" alt=Facebook/>
+            <img class="Redes__IconoFacebook hover" src="Multimedia/facebook.png" alt=Facebook/>
             <img class="Redes__IconoInstagram hover" src="Multimedia/Instagram.jpg" alt=Instagram/>
         </div>
         
